# JCG-TestDataScience-1

./: .gitignore  404.html  README.md  index.html  mypy.ini  pyproject.toml  tox.ini
analisis-exploratorio/: index.html
docs/: analisis-exploratorio.ipynb  index.md  instalacion-y-uso.md  transformacion-seleccion-modelo.ipynb
instalacion-y-uso/: index.html
jcg_testdatascience_1/: __init__.py  config.yml  pipeline.py  predict.py  train_pipeline.py
jcg_testdatascience_1/config/: core.py
jcg_testdatascience_1/models/: jcg_testdatascience_1_output_v0.0.1.pkl
jcg_testdatascience_1/processing/: data_manager.py  features.py  validation.py
notebooks/: analisis-exploratorio.html  analisis-exploratorio.ipynb  transformacion-seleccion-modelo.html  transformacion-seleccion-modelo.ipynb
tests/: test_config.py  test_data_manager.py  test_predict.py  test_train.py
transformacion-seleccion-modelo/: index.html
